--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <input type="text" id="input" placeholder="Paste your link/text">
 
-    <button id="button">Generate QR</button>
+    <button id="button">Generate your QR</button>
 
     <img src="" alt="" id="image">
   </div>
